--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "maxmind": "^2.12.0"
   },
   "devDependencies": {
-    "@userdashboard/dashboard": "^1.0.13"
+    "@userdashboard/dashboard": "^1.0.14"
   },
   "dashboard": {
+    "modules": [
+      "@userdashboard/maxmind-geoip"
+    ],
     "server": [
       "/src/server/bind-country.js"
     ]
