--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "maxmind": "^2.12.0"
   },
   "devDependencies": {
-    "@userdashboard/dashboard": "^1.0.30"
+    "@userdashboard/dashboard": "^1.0.30",
+    "puppeteer": "^1.19.0"
   },
   "dashboard": {
     "modules": [
