--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "url": "git://github.com/userdashboard/maxmind-geoip.git"
   },
   "main": "index.js",
-  "license": "SPDX(MIT OR Unlicense)",
+  "license": "MIT",
   "scripts": {
-    "test": "mocha src --recursive --no-colors --retries 3 --timeout 120000 --slow 120000"
+    "test": "mocha src --recursive --no-colors --timeout 120000 --slow 120000"
   },
   "dependencies": {
     "maxmind": "^2.12.0"
