--- a/src/.github/workflows/test-server-handlers.yml
+++ b/src/.github/workflows/test-server-handlers.yml
@@ -1,4 +1,4 @@
-name: test-administrator-ui
+name: test-server-handlers
 
 on: [push]
 
@@ -16,30 +16,29 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - name: Setup dependencies
       run: |
-        npm install mocha -g &&
-        npm install puppeteer --no-save
+        npm install mocha puppeteer --no-save
     - name: Test (fs)
       run: |
-        npm test -- --fgrep "www/administrator" || exit 1
+        node node_modules/mocha/bin/mocha src/server --recursive --timeout 120000 --slow 120000 || exit 1
       env:
         NODE_ENV: testing
         FAST_START: true
-        DASHBOARD_SERVER: "http://localhost:9005"
+        DASHBOARD_SERVER: "http://localhost:9000"
         DOMAIN: "localhost"
-        PORT: 9005
-        STORAGE_PATH: /tmp/test-data3
+        PORT: 9000
+        STORAGE_PATH: /tmp/test-data
         GENERATE_SITEMAP_TXT: false
         GENERATE_API_TXT: false
     - name: Test (fs + encryption)
       run: |
-        npm test -- --fgrep "www/administraator" || exit 1
+        node node_modules/mocha/bin/mocha src/server --recursive --timeout 120000 --slow 120000 || exit 1
       env:
         NODE_ENV: testing
         FAST_START: true
-        DASHBOARD_SERVER: "http://localhost:9012"
+        DASHBOARD_SERVER: "http://localhost:9007"
         DOMAIN: "localhost"
-        PORT: 9012
-        STORAGE_PATH: /tmp/test-data3
+        PORT: 9007
+        STORAGE_PATH: /tmp/test-data
         GENERATE_SITEMAP_TXT: false
         GENERATE_API_TXT: false
         ENCRYPTION_SECRET: "12345678901234567890123456789012"
