--- a/src/.github/workflows/test-user-api.yml
+++ b/src/.github/workflows/test-user-api.yml
@@ -1,4 +1,4 @@
-name: test-content-handlers
+name: test-user-api
 
 on: [push]
 
@@ -16,30 +16,29 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - name: Setup dependencies
       run: |
-        npm install mocha -g &&
-        npm install puppeteer --no-save
+        npm install mocha puppeteer --no-save
     - name: Test (fs)
       run: |
-        npm test -- --fgrep "content" || exit 1
+        node node_modules/mocha/bin/mocha src/www/api/user --recursive --timeout 120000 --slow 120000 || exit 1
       env:
         NODE_ENV: testing
         FAST_START: true
-        DASHBOARD_SERVER: "http://localhost:9002"
+        DASHBOARD_SERVER: "http://localhost:9003"
         DOMAIN: "localhost"
-        PORT: 9002
-        STORAGE_PATH: /tmp/test-data
+        PORT: 9003
+        STORAGE_PATH: /tmp/test-data1
         GENERATE_SITEMAP_TXT: false
         GENERATE_API_TXT: false
     - name: Test (fs + encryption)
       run: |
-        npm test -- --fgrep "content" || exit 1
+        node node_modules/mocha/bin/mocha src/www/api/user --recursive --timeout 120000 --slow 120000 || exit 1
       env:
         NODE_ENV: testing
         FAST_START: true
-        DASHBOARD_SERVER: "http://localhost:9009"
+        DASHBOARD_SERVER: "http://localhost:9010"
         DOMAIN: "localhost"
-        PORT: 9009
-        STORAGE_PATH: /tmp/test-data
+        PORT: 9010
+        STORAGE_PATH: /tmp/test-data1
         GENERATE_SITEMAP_TXT: false
         GENERATE_API_TXT: false
         ENCRYPTION_SECRET: "12345678901234567890123456789012"
