--- a/.github/workflows/test-server-handlers.yml
+++ b/.github/workflows/test-server-handlers.yml
@@ -16,7 +16,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - name: Setup dependencies
       run: |
-        npm install mocha puppeteer --no-save
+        npm install mocha puppeteer @userdashboard/dashboard  --no-save
     - name: Test (fs)
       run: |
         node node_modules/mocha/bin/mocha src/server --recursive --timeout 120000 --slow 120000 || exit 1
