Force mocha to exit after tests

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "test": "mocha --inline-diffs --full-trace --bail --async-only --recursive --timeout 120000 --slow 120000 src"
+    "test": "mocha --exit --inline-diffs --full-trace --bail --async-only --recursive --timeout 120000 --slow 120000 './src{,!(public)/**}/*.test.js'"
   },
   "dependencies": {
     "maxmind": "^2.12.0"
