--- a/.github/workflows/test-and-publish.yml
+++ b/.github/workflows/test-and-publish.yml
@@ -15,14 +15,14 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - name: Install dependencies
       run: |
-        npm install faker mocha puppeteer@2.1.1 @userdashboard/dashboard --no-save
         git config --global user.name "${{ secrets.NAME }}"
         git config --global user.email "${{ secrets.EMAIL }}"
+        npm version patch
+        npm install
+        npm install faker mocha puppeteer@2.1.1 @userdashboard/dashboard --no-save
         npm install -g standard
     - name: Lint (standard.js)
       run: standard src
-    - name: Increase NPM version
-      run: npm version patch
     - name: Test (fs)
       run: npm test > tests.txt
       env:
