--- a/.github/workflows/test-and-publish.yml
+++ b/.github/workflows/test-and-publish.yml
@@ -13,23 +13,37 @@ jobs:
     - uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - name: Install dependencies
+    - name: Set up as module
       run: |
         git config --global user.name "${{ secrets.NAME }}"
         git config --global user.email "${{ secrets.EMAIL }}"
         npm version patch
-        npm install
-        npm install faker mocha puppeteer@2.1.1 @userdashboard/dashboard --no-save
-        npm install -g standard
+        HERE=`pwd`
+        mkdir /tmp/project
+        cd /tmp/project
+        npm init -y
+        npm install faker puppeteer@2.1.1 @userdashboard/dashboard @userdashboard/maxmind-geoip @userdashboard/storage-redis
+        npm install -g mocha
+        rm node_modules/@userdashboard/maxmind-geoip/*.js
+        rm -rf node_modules/@userdashboard/maxmind-geoip/src
+        cp $HERE/*.js node_modules/@userdashboard/maxmind-geoip
+        cp -R $HERE/src/ node_modules/@userdashboard/maxmind-geoip/src/
+        echo "global.applicationPath = __dirname" > main.js
+        PACKAGE=`cat package.json`
+        PACKAGE=${PACKAGE/\"description\"\: \"\"/\"dashboard\": \{ \"modules\"\: \[\"@userdashboard/maxmind-geoip\"\] \}}
+        echo $PACKAGE > package.json
+        set -o pipefail
     - name: Lint (standard.js)
       run: standard src
-    - name: Test (fs)
-      run: npm test | tee tests.txt ; test ${PIPESTATUS[0]} -eq 0
+    - name: Test (redis)
+      run: mocha --retries 2 --file main.js --bail --exit --full-trace --recursive --timeout 90000000 "./node_modules/@userdashboard/**/{,!(public)}/*.test.js" | tee $HERE/tests.txt
       env:
         NODE_ENV: testing
         FAST_START: true
         DASHBOARD_SERVER: "http://localhost:9000"
         DOMAIN: "localhost"
+        STORAGE: "@userdashboard/storage-redis"
+        REDIS_URL: "redis://localhost:6379"
         GENERATE_SITEMAP_TXT: false
         GENERATE_API_TXT: false
     - name: Generate supporting texts
