--- a/.github/workflows/test-and-publish.yml
+++ b/.github/workflows/test-and-publish.yml
@@ -18,12 +18,12 @@ jobs:
         git config --global user.name "${{ secrets.NAME }}"
         git config --global user.email "${{ secrets.EMAIL }}"
         npm version patch
-        HERE=`pwd`
+        export HERE=`pwd`
         mkdir /tmp/project
         cd /tmp/project
         npm init -y
         npm install faker puppeteer@2.1.1 @userdashboard/dashboard @userdashboard/maxmind-geoip @userdashboard/storage-redis
-        npm install -g mocha
+        npm install -g mocha standard
         rm node_modules/@userdashboard/maxmind-geoip/*.js
         rm -rf node_modules/@userdashboard/maxmind-geoip/src
         cp $HERE/*.js node_modules/@userdashboard/maxmind-geoip
@@ -37,6 +37,7 @@ jobs:
       run: standard src
     - name: Test (redis)
       run: mocha --retries 2 --file main.js --bail --exit --full-trace --recursive --timeout 90000000 "./node_modules/@userdashboard/**/{,!(public)}/*.test.js" | tee $HERE/tests.txt
+      working-directory: '/tmp/project'
       env:
         NODE_ENV: testing
         FAST_START: true
