--- a/.github/workflows/test-and-publish.yml
+++ b/.github/workflows/test-and-publish.yml
@@ -17,8 +17,8 @@ jobs:
       run: |
         git config --global user.name "${{ secrets.NAME }}"
         git config --global user.email "${{ secrets.EMAIL }}"
+        npm install
         npm version patch
-        export HERE=`pwd`
         mkdir /tmp/project
         cd /tmp/project
         npm init -y
@@ -26,17 +26,21 @@ jobs:
         npm install -g mocha standard
         rm node_modules/@userdashboard/maxmind-geoip/*.js
         rm -rf node_modules/@userdashboard/maxmind-geoip/src
-        cp $HERE/*.js node_modules/@userdashboard/maxmind-geoip
-        cp -R $HERE/src/ node_modules/@userdashboard/maxmind-geoip/src/
+        cp /home/runner/work/maxmind-geoip/maxmind-geoip/*.js node_modules/@userdashboard/maxmind-geoip
+        cp -R /home/runner/work/maxmind-geoip/maxmind-geoip/src/ node_modules/@userdashboard/maxmind-geoip/src/
         echo "global.applicationPath = __dirname" > main.js
         PACKAGE=`cat package.json`
         PACKAGE=${PACKAGE/\"description\"\: \"\"/\"dashboard\": \{ \"modules\"\: \[\"@userdashboard/maxmind-geoip\"\] \}}
         echo $PACKAGE > package.json
-        set -o pipefail
     - name: Lint (standard.js)
       run: standard src
     - name: Test (redis)
-      run: mocha --retries 2 --file main.js --bail --exit --full-trace --recursive --timeout 90000000 "./node_modules/@userdashboard/**/{,!(public)}/*.test.js" | tee $HERE/tests.txt || exit 1
+      run: |
+        mocha --retries 2 --file main.js --bail --exit --full-trace --recursive --timeout 90000000 "./node_modules/@userdashboard/**/{,!(public)}/*.test.js" | tee /home/runner/work/maxmind-geoip/maxmind-geoip/tests.txt
+        TESTS=`cat /home/runner/work/maxmind-geoip/maxmind-geoip/tests.txt`
+        if [[ "$TESTS" == *" 1)"* ]]; then
+          exit 1
+        fi
       working-directory: '/tmp/project'
       env:
         NODE_ENV: testing
