Use Redis service

--- a/.github/workflows/test-and-publish.yml
+++ b/.github/workflows/test-and-publish.yml
@@ -13,6 +13,10 @@ jobs:
     - uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
+    - uses: zhulik/redis-action@1.1.0
+      with:
+        redis version: '5'
+        number of databases: 1
     - name: Set up as module
       run: |
         git config --global user.name "${{ secrets.NAME }}"
@@ -20,7 +24,6 @@ jobs:
         npm install
         npm install @userdashboard/dashboard --no-save
         npm version patch
-        sudo apt-get install -y redis-server
         mkdir /tmp/project
         cd /tmp/project
         npm init -y
