--- a/.github/workflows/generate-documentation.yml
+++ b/.github/workflows/generate-documentation.yml
@@ -59,4 +59,5 @@ jobs:
         external_repository: 'userdashboard/userdashboard.github.io'
         personal_token: ${{ secrets.DOCUMENTATION_PAT }}
         publish_dir: ./documentation
+        publish_branch: master
         keep_files: true
