--- a/.github/workflows/generate-documentation.yml
+++ b/.github/workflows/generate-documentation.yml
@@ -19,7 +19,6 @@ jobs:
         number of databases: 1
     - name: Set up as module
       run: |
-        echo "pwd: `pwd`"
         git config --global user.name "${{ secrets.NAME }}"
         git config --global user.email "${{ secrets.EMAIL }}"
         npm install
@@ -39,7 +38,7 @@ jobs:
         echo $PACKAGE > package.json
     - name: Generate documentation
       run: |
-        mocha --grep returns --retries 2 --file main.js --bail --exit --full-trace --recursive --timeout 90000000 "./node_modules/@userdashboard/maxmind-geoip/{,!(public)}/*.test.js"
+        mocha --grep returns --retries 2 --file main.js --bail --exit --full-trace --recursive --timeout 90000000 "./node_modules/@userdashboard/maxmind-geoip/*.test.js"
       working-directory: "/tmp/project"
       env:
         NODE_ENV: testing
@@ -59,6 +58,6 @@ jobs:
       with:
         external_repository: 'userdashboard/userdashboard.github.io'
         personal_token: ${{ secrets.DOCUMENTATION_PAT }}
-        publish_dir: ./documentation
+        publish_dir: "/home/runner/work/maxmind-geoip/maxmind-geoip/documentation"
         publish_branch: master
         keep_files: true
