--- a/.github/workflows/generate-documentation.yml
+++ b/.github/workflows/generate-documentation.yml
@@ -23,7 +23,6 @@ jobs:
         git config --global user.email "${{ secrets.EMAIL }}"
         npm install
         npm version patch
-        mkdir -p documentation
         mkdir /tmp/project
         cd /tmp/project
         npm init -y
@@ -51,11 +50,10 @@ jobs:
         GENERATE_API_TXT: false   
         GENERATE_RESPONSE: true
         RESPONSE_PATH: "/home/runner/work/maxmind-geoip/maxmind-geoip/documentation"
-        LOG_LEVEL: "info,error,warn,log"
     - name: Deploy to Github Pages
       uses: peaceiris/actions-gh-pages@v3
       with:
-        external_repository: 'userdashboard/userdashboard.github.io'
+        external_repository: "userdashboard/userdashboard.github.io"
         personal_token: ${{ secrets.DOCUMENTATION_PAT }}
         publish_dir: documentation
         publish_branch: master
