--- a/.github/workflows/test-and-publish.yml
+++ b/.github/workflows/test-and-publish.yml
@@ -52,7 +52,7 @@ jobs:
       run: standard src
     - name: Test (redis)
       run: |
-        mocha --retries 2 --file main.js --bail --exit --full-trace --recursive --timeout 90000000 "./node_modules/@userdashboard/maxmind-geoip/{,!(public)}/*.test.js" | tee /home/runner/work/maxmind-geoip/maxmind-geoip/tests.txt
+        mocha --retries 2 --file main.js --bail --exit --full-trace --recursive --timeout 90000000 "./node_modules/@userdashboard/maxmind-geoip/**/{,!(public)}/*.test.js" | tee /home/runner/work/maxmind-geoip/maxmind-geoip/tests.txt
         TESTS=`cat /home/runner/work/maxmind-geoip/maxmind-geoip/tests.txt`
         if [[ "$TESTS" == *" 1)"* ]]; then
           exit 1
