--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -55,8 +55,8 @@ jobs:
           echo registry=$NPM_PROXY > .npmrc
         fi
         if [ -d /opt/hostedtoolcache/node/ ]; then
-          alias node=`find /opt/hostedtoolcache/node/ -type f -name node`
-          alias npm=`find /opt/hostedtoolcache/node/ -type f -name npm`
+          export alias node=`find /opt/hostedtoolcache/node/ -maxdepth 4 -name node`
+          export alias npm=`find /opt/hostedtoolcache/node/ -maxdepth 4 -name npm`
         fi
         npm init -y
         npm install "$HERE" @userdashboard/dashboard mocha puppeteer faker
@@ -64,13 +64,14 @@ jobs:
         PACKAGE=${PACKAGE/\"description\"\: \"\"/\"dashboard\": \{ \"modules\"\: \[\"@userdashboard/localization\"\] \}}
         echo $PACKAGE > package.json
         echo "global.applicationPath = __dirname" > main.js
+        echo "require('@userdashboard/maxmind-geoip/test-helper.js')" >> main.js
     - name: Generate UI screenshots and API responses
       run: |
         HERE=`pwd`
         cd /tmp/project
         export RESPONSE_PATH="$HERE/documentation"
         export SCREENSHOT_PATH="$HERE/documentation/screenshots"
-        ./node_modules/.bin/mocha --exit --file main.js --recursive --timeout 90000000 --slow 90000000 $(find ./node_modules/@userdashboard/*/ -name "*.test.js" | grep -i -v [a-z]/node_modules | sort -k5.1,8.1 -t /) | tee $HERE/tests.txt
+        ./node_modules/.bin/mocha --exit --file main.js --recursive --timeout 90000000 --slow 90000000 $(find ./node_modules/@userdashboard/*/ -name "*.test.js" | grep -i -v [a-z0-9]/node_modules | sort -k5.1,8.1 -t /) | tee $HERE/tests.txt
         TESTS=`cat $HERE/tests.txt`
         if [[ "$TESTS" == *" 1)"* ]]; then
           exit 1
