--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
     "maxmind": "^4.3.1"
   },
   "peerDependencies": {
-    "@userdashboard/dashboard": "1.0.0 - 9999.9999.9999"
+    "@userdashboard/dashboard": "1.x - latest"
+  },
+  "devDependencies": {
+    "@userdashboard/dashboard": "1.x - latest"
+  },
+  "optionalDependencies": {
+    "@userdashboard/dashboard": "1.x - latest"
   },
   "description": "MaxMind GeoIP module for Dashboard",
   "engine": {
